<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SummerProject</string>
    <string name="change_city">Change city</string>
    <string name="change_profile">Update profile</string>
    <string name="Show_suggestions">Show Suggestions</string>
    <string name="open_weather_maps_app_id">d659002e728c0393b27f7d53f9acf94c</string>
    <string name="path">Show Path</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="alert">Major weather alerts…</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="add_suggestions">Add my suggestion</string>
    <string name="Show_temperature">Show Temperature</string>
    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="Heatstrokes">Heatstroke?</string>
    <string name="Fainting">Faintings?</string>
    <string name="Migraine">Migraines?</string>
    <string name="Break">Skin problems at low moisture?</string>
    <string name="Pimple">Pimples on high heat?</string>
    <string name="Recover">Rest recommended?</string>
    <string name="bp">Blood Pressure</string>
    <string name="date">Date…</string>
    <string name="Service">ServerLoadReduction</string>
    <string name="AgeGroup"> \u0020\u0020\u0020\u0020\u0020\u0020For which age group ?</string>
    <string name="Features">  &#13;&#10;&#13;&#10;\u0020\u0020\u0020\u0020\u0020\u0020\u0020  Features?(Max 50 characters)</string>
    <string name="range">"Nice temperatures…"</string>
    <string name="Gender">Male?</string>
    <string name="other">Any other issues?(Be concise)</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="current">Current Weather</string>
    <string name="predict">Predicted Weather</string>
    <string name="title_activity_maps">Map</string>
    <string name="Go" tools:ignore="TypographyEllipsis">Go to Maps...</string>
    <string name="next">Next</string>
    <string name="start">start</string>
    <string name="hobbies">Hobbies</string>
    <string name="cancel">Stop</string>
    <string name="move">Move to&#8230;</string>
    <string name="AgeGroup2">Age group</string>
    <string name="Description">Description</string>
</resources>
